# coworker_ai

./: .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
src/: main.py
src/api/: main.py
src/role/: README.md
src/role/prompt_repository/: manager.py
src/role/prompt_repository/system/: default.md
src/storage/: README.md  embeddings.py
src/ui/: datastructures.py  main.py
