[tool.poetry]
name = "coworker-ai"
version = "0.1.0"
description = "Helpful AI assistant for my daily routines"
authors = ["Yevhen Dyachenko"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src", from = "."}
]

[tool.poetry.dependencies]
python = "^3.12"
redis = "^5.0.6"
fastapi = "^0.111.0"
gradio = "^4.37.2"
llama-index-vector-stores-chroma = "^0.1.9"
llama-index = "^0.10.50"
llama-index-llms-lmstudio = "^0.1.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
